Git ignore settings updates.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 .idea/
+taxon_home/views/pagelets/admin/ImageEditorPagelet.py.bak.2017.10.06
+taxon_home/templates/pageletLayouts/public/imageEditor.html.bckp
+taxon_home/templates/pageletLayouts/admin/imageEditor.html.bckp
+taxon_home/static/js/ImagesUI/taggableUtil/TaggerUI.js.bak.2017.08.03
+taxon_home/static/js/ImagesUI/tagViewingUI/Tag.js.bckp
+taxon_home/models.py.bak.2017.03.14
+taxon_home/model_mgdb.py
+settings.py.bak.2016-06-03
+settings.py.bak.0222
+manage.py.bak.1.8.4
+logs/debug.log.2017.10.07
+logs/debug.log.2017.10.02
+logs/debug.log.2017.09.19
+logs/debug.log.2017.06.21
+logs/debug.log.2017.05.16
+logs/debug.log.2017.04.18
+logs/debug.log.2017.04.12
+logs/debug.log.2017.03.29
